--- a/css/modules.css
+++ b/css/modules.css
@@ -5,6 +5,7 @@
 }
 
 .content .title {
+  position: -webkit-sticky;
   position: sticky;
   padding-top: 20px;
   top: 40px;
