--- a/css/side_nav.css
+++ b/css/side_nav.css
@@ -1,4 +1,5 @@
 #table-of-contents {
+  position: -webkit-sticky;
   position: sticky;
   top:40px;
   height: 98vh;
